--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8080
 
 spring.datasource.url=jdbc:h2:mem:brokagedb;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 jwt.expiryMinutes=180
 
