RF + test updates

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,3 +2,5 @@ spring.datasource.username=${DS_USERNAME}
 spring.datasource.password=${DS_PASSWORD}
 
 jwt.secretKey=${JWT_SECRET_KEY}
+
+users=${USERS}
